# privacy-cash

./: .gitignore  README.md  package-lock.json
anchor/: Anchor.toml  package-lock.json  package.json  test_wsol.js
anchor/programs/zkcash/: Cargo.toml
anchor/programs/zkcash/src/: groth16.rs  lib.rs  merkle_tree.rs  utils.rs
anchor/programs/zkcash/tests/unit/: groth16_test.rs  merkle_tree_test.rs  mod.rs  utils_test.rs
anchor/tests/: anchor.ts  constants.ts  zkcash.ts
artifacts/circuits/: transaction16.wasm  transaction2.r1cs  transaction2.sym  transaction2.wasm  transaction2.zkey  transaction2_0.zkey  verifyingkey16.json  verifyingkey2.json
circuits/: keypair.circom  merkleProof.circom  merkleTree.circom  merkleTreeUpdater.circom  transaction.circom  transaction16.circom  transaction2.circom
indexer/: .env.sample  README.md  package-lock.json  package.json  tsconfig.json
indexer/src/: config.ts  index.ts
program/: Cargo.toml
program/lib/: sparse_merkle_tree.rs
program/src/: errors.rs  instruction.rs  lib.rs  processor.rs
program/tests/: lib.rs
scripts/: buildCircuit_prod_solana.sh  check_fees_balance.ts  check_tree_state.ts  create-keypair.ts  decrypt_specific_utxo.ts  decrypt_utxo.ts  deposit_devnet.ts  encryption.ts  fetch_user_utxos.ts  ffjavascript.d.ts  get_verification_keys.ts  globals.d.ts  initialize_program_devnet.ts  package-lock.json  package.json  prover.ts  sample_proof_generator.ts  test-keypair.json  tsconfig.json  types.d.ts  withdraw_devnet.ts  withdraw_devnet_with_relayer.ts  withdraw_fees.ts
scripts/__tests__/: encryption.test.ts
scripts/models/: keypair.ts  utxo.ts
(+31 files in other folders)
