[package]
name = "zkcash"
version = "0.1.0"
description = "Anchor program for zkcash"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zkcash"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.31.0"
bytemuck = { version = "1.20.0", features = ["min_const_generics"] }

