[package]
name = "zkcash"
version = "0.1.0"
description = "Anchor program for zkcash"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zkcash"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
bytemuck = { version = "1.20.0", features = ["derive", "min_const_generics"] }
light-poseidon = "0.3.0"
light-hasher = "2.0.0"
